BugFix z-index of grw-header

--- a/src/client/styles/scss/_subnav.scss
+++ b/src/client/styles/scss/_subnav.scss
@@ -8,10 +8,9 @@ $easeInOutCubic: cubic-bezier(0.65, 0, 0.35, 1);
 /*
  * layout for sticky
  */
-.grw-header {
+.grw-header.sticky-top {
   // Adjust to be on top of the growi subnavigation
   z-index: $zindex-sticky - 100;
-
   height: 80px;
   pointer-events: none; // disable pointer events for sticky
 
